--- a/views/write.ejs
+++ b/views/write.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,45 +8,50 @@
   <title>Facebook</title>
   <link rel='stylesheet' href='/stylesheets/write.css' />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display&display=swap" rel="stylesheet">
-<link rel="shortcut icon" type="image/jpg" href="/images/logo.jpg"/>
-</head>
-<body>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" type="image/jpg" href="/images/logo.jpg" />
   <link rel="icon" type="image/png" href="svg.png">
-  <link rel = "stylesheet" href = "style.css">
-  <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.1.2/tailwind.min.css">
 </head>
-<body>
-  <header class="text-gray-400 bg-gray-900 body-font">
-      <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-        <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
-          <image class = "logo" src = "/images/logo.jpg"></image>
-          <span class="ml-3 text-xl">Facebook</span>
-        </a>
-        <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700	flex flex-wrap items-center text-base justify-center">
-          <a class="mr-5 hover:text-white" href = "aboutus.html">Posts</a>
-          <a class="mr-5 hover:text-white" href = "/write" target="_blank">Comments</a>
-          <a class="mr-5 hover:text-white">Videos</a>
-        </nav>
-        <button href = "table"class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a class = "view" href = "#anchor">View Comments </a>
-        </div>
-        </header>
-        
-     <form action="submit" method="POST"></form>   
-  <div class="main-box">
-    <span>Enter Name</span>
-    <div class="text">
-      <input type="text">
-    </div>
 
-    <a class="mr-5 hover:text-white">Enter Comment</a>
-    <div class="textarea">
-      <textarea name="" id="" cols="30" rows="5"></textarea>
+<body>
+
+  <header class="text-gray-400 bg-gray-900 body-font">
+    <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+      <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+        <image class="logo" src="/images/logo.jpg"></image>
+        <span class="ml-3 text-xl">Facebook</span>
+      </a>
+      <nav
+        class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700	flex flex-wrap items-center text-base justify-center">
+        <a class="mr-5 hover:text-white" href="/" >Home</a>
+        <a class="mr-5 hover:text-white" href="/post">Posts</a>
+        <a class="mr-5 hover:text-white" href="/reviews">Comments</a>
+        <a class="mr-5 hover:text-white" href="/video">Videos</a>
+      </nav>
+      <button href="table"
+        class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"><a
+          class="view" href="#anchor">View Comments </a>
     </div>
-    <a href="/post">Insert</a>
-  </div>
-</form>
-<a href="/reviews">Read Other's Comments</a>
+  </header>
+
+  <form action="/submit" method="POST">
+    <div class="main-box">
+      <span>Enter Name</span>
+      <div class="text">
+        <input type="text" id="commentname" name="commentname">
+      </div>
+      <a class="mr-5 hover:text-white">Enter Comment</a>
+      <div class="textarea">
+        <textarea name="" id="reviews" cols="30" rows="5" name="reviews"></textarea>
+      </div>
+       <button> Submit</button>
+    </div>
+  </form>
+
+  <a href="#">Read Other's Comments</a>
 </body>
+
 </html>
